--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^20.4.5",
-    "@types/react": "^18.2.18",
+    "@types/react": "^18.2.19",
     "@types/tailwindcss": "^3.1.0",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
@@ -57,7 +57,7 @@
     "stylelint-order": "^6.0.3",
     "stylelint-prettier": "^4.0.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.1.6"
   },
   "resolutions": {
     "autoprefixer": "10.4.5"
